# CHANGES TO v0.2.7 #

 * Added test sutie to test file conversion.
 * Expanded test suite to include test of all export formats.

# CHANGES TO v0.2.6 #

 * Cleaned up NAMESPACE file.

# CHANGES TO v0.2.5 #

 * If file format for a remote file cannot be identified from the supplied URL or the final URL reported by `curl::curl_fetch_memory()`, the HTTP headers are checked for a filename in the Content-Disposition header. (#36)
 * Removed longurl dependency. This is no longer needed because we can identify formats using curl's url argument.
 * Fixed a bug related to importing European-style ("csv2") format files. (#44)
 * Updated CSVY import to embed variable-level metadata. (#52)
 * Use `urltools::url_parse()` to extract file extensions from complex URLs (e.g., those with query arguments). (#56)
 * Fixed NAMESPACE notes for base packages. (#58)

# CHANGES TO v0.2.4 #

 * Modified behavior so that files imported using haven now store variable metadata at the data.frame level by default (unlike the default behavior in haven, which can cause problems). (#37, h/t Ista Zahn)
 * Added support for importing CSVY (http://csvy.org/) formatted files. (#52)
 * Added import dependency on data.table 1.9.5. (#39)

# CHANGES TO v0.2.2 #

 * Uses the longurl package to expand shortened URLs so that their file type can be easily determined. 

# CHANGES TO v0.2.1 #

 * Improved support for importing from compressed directories, especially web-based compressed directories. (#38)
 * Add import dependency on curl >= 0.6 to facilitate content type parsing and format inference from URL redirects. (#36)
 * Add bit64 to `Suggests` to remove an `import` warning.

# CHANGES TO v0.2 #

 * `import` always returns a data.frame, unless `setclass` is specified. (#22)
 * Added support for import from legacy Excel (.xls) files `readxl::read_excel`, making its use optional. (#19)
 * Added support for import from and export to the system clipboard on Windows and Mac OS.