@@ -85,6 +85,52 @@ get_ext <- function(file) {
     }
 }
 
+remote_to_local <- function(file, format) {
+    if (!missing(format)) {
+        fmt <- get_type(format)
+    }
+    # try to extract format from URL
+    fmt <- try(get_ext(file), silent = TRUE)
+    if (inherits(fmt, "try-error")) {
+        fmt <- "TMP"
+    }
+    # save file locally
+    temp_file <- tempfile(fileext = paste0(".", fmt))
+    u <- curl_fetch_memory(file)
+    writeBin(object = u$content, con = temp_file)
+    
+    if (fmt == "TMP") {
+        # try to extract format from curl's final URL
+        fmt <- try(get_ext(u$url), silent = TRUE)
+        if (inherits(fmt, "try-error")) {
+            # try to extract format from headers
+            h1 <- parse_headers(u$headers)
+            # check `Content-Disposition` header
+            if (any(grepl("^Content-Disposition", h1))) {
+                h <- h1[grep("filename", h1)]
+                if (length(h)) {
+                    f <- regmatches(h, regexpr("(?<=\")(.*)(?<!\")", h, perl = TRUE))
+                    if (!length(f)) {
+                        f <- regmatches(h, regexpr("(?<=filename=)(.*)", h, perl = TRUE))
+                    }
+                    f <- paste0(dirname(temp_file), "/", f)
+                    file.rename(temp_file, f)
+                }
+            }
+            # check `Content-Type` header
+            #if (any(grepl("^Content-Type", h1))) {
+            #    h <- h1[grep("^Content-Type", h1)]
+            #    ## PARSE MIME TYPE
+            #}
+        } else {
+            f <- sub("TMP$", fmt, temp_file)
+            file.rename(temp_file, f)
+            temp_file <- f
+        }
+    }
+    return(temp_file)
+}
+
 cleanup.haven <- function(x) {
     xinfo <- list(var.labels = sapply(x, attr, which = "label", exact = TRUE),
                   label.table = sapply(x, attr, which = "labels", exact = TRUE))
